# ziptree

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  test_ziptree.py  ziptree.py
src/: arctree.py  ziptree.py
tests/: test_arctree.py  test_ziptree.py
