[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "ziptree"
version = "0.1.0"
description = "Display ZIP file contents as a directory tree"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Bernhard Wagner" }]
requires-python = ">=3.10"

[project.scripts]
ziptree = "ziptree:main"

[tool.setuptools]
py-modules = ["ziptree"]

[tool.setuptools.package-dir]
"" = "src"

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
